# ML_Delivery_POCs

./: Cluster Modifications Example.ipynb  README.md
Clustering Modifications with configuration file/: Cluster Modifications Example.ipynb
Clustering Modifications with configuration file/data/: sample_data.csv
Clustering Modifications with configuration file/environment_setup/: pyproject.toml
Clustering Modifications with configuration file/src/: google_drive.py
config/: modifications.json
src/: clustering_help_functions.py
