[tool.poetry]
name = "Clusteirng toml"
version = "0.1.0"
description = "Contains all the necessary libraries so that clustering and clustering modifications can be applied"
authors = ["Kleomenis Kogias"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
streetbees-data = {git = "ssh://git@github.com/Streetbees/data-lib.git", rev = "0.71.0"}
ml-clustering = {git = "git@github.com:Streetbees/ml_clustering.git", rev = "v0.2.3"}
ml-data-bee = {git = "git@github.com:Streetbees/ml_data_bee.git", rev = "v1.5.1"}
oauth2client = "^4.1.3"
gspread = "^3.6.0"
omegaconf = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"